2005-01-09  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* VERSION (PACKAGE_NAME): release 2.5.7

2005-01-09  Jan Nieuwenhuizen  <janneke@gnu.org>

	* scm/output-gnome.scm (utf8-string): New function.
	(otf-name-mangling): Remove.

	* lily/pango-font.cc (Pango_font): Use font string iso font
	filename for utf8-text.

	* buildscripts/gen-emmentaler-scripts.py: Remove designsize from
	name.

2005-01-08  Graham Percival  <gperlist@shaw.ca>

	* Documentation/user/notation.itely: add info about
	Staff.extraNatural = ##f in Pitches section.  Also
	fixed some minor issues in the Vocal music section.

2005-01-08  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* scm/output-ps.scm (white-text): comment out Helvetica font,
	which is broken for my GS install.

	* lily/pango-font.cc (pango_item_string_stencil): use ink_rect,
	which provides a tighter bbox.

	* scm/define-grobs.scm (all-grob-descriptions): remove all
	extra-offsets from definitions.

2005-01-08  Erlend Aasland  <erlenda@gmail.com>

	* scm/output-lib.scm: Rename guitar-tunings to guitar-tuning and
	add tuning for 4-string bass and some common 4/5-string banjo
	tunings.  New function (four-string-banjo) turns a 5-string tuning
	into a 4-string tuning.  New function
	(fret-number-tablature-format-banjo) computes correct fret numbers
	on 5-string banjos.

	* ly/engraver-init.ly: Default stringTunings = #guitar-tuning
	Add beam correction to TabVoice.

	* scm/define-grobs.scm: Adjust notehead offset. Print fret numbers
	using bold font; makes tabs more readable.

2005-01-08  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lily/font-select.cc (get_font_by_design_size): don't make
	Modified_font_metric; this causes trouble, since we don't know the
	font magnification from inside Pango_font::text_stencil()

	* lily/all-font-metrics.cc (find_pango_font): take magnification argument.

	* Documentation/user/notation.itely (The Lyrics context): comment out
	broken {Small ensembles} link.
